# katsu

./: .gitignore  README.md  config.py  pyproject.toml  run.py
katsudb/extensions/: extensions.sql
katsudb/functions/: 0000.config_create.sql  0001.config_update.sql  0002.codelink_create.sql  0003.codelink_update.sql  0004.member_create.sql  0005.member_update.sql  0006.savingsaccount_create.sql  0007.comment_create.sql  0008.document_create.sql  0009.transaction_create.sql  0010.loan_create.sql  0011.loan_update.sql  0012.loan_status_update.sql  0013.internalaccount_create.sql
katsudb/records/: 0000.currencies.sql  0001.accounttypes.sql  0001.configs.sql  0003.accountgroups.sql  0003.roles.sql  0004.roles.sql  0005.loanstatuscodes.sql  0006.loanclosecodes.sql  0007.loanpaymentfrequencies.sql  0008.role_CUMember.sql  0009.CASH_ACCOUNT_codelinks and accounts.sql  0010.loanrepaymentmethods.sql
katsudb/tables/: 0000.currencies.sql  0002.roles.sql  0003.users.sql  0004.accounttypes.sql  0005.accountgroups.sql  0006.financialaccounts.sql  0007.codelinks.sql  0008.transactionheaders.sql  0009.transactiondetails.sql  0010.internalaccounts.sql  0011.members.sql  0012.savingsaccountclosecodes.sql  0013.savingsaccounts.sql  0014.comments.sql  0015.documents.sql  0016.loanstatuscodes.sql  0017.loanclosecodes.sql  0018.loanpaymentfrequencies.sql  0019.loans.sql  (+4 more)
katsuserver/: __init__.py  database.py  errors.py  forms.py  schemas.py  views.py
tests/: test_auth.py  test_codelinks.py  test_comments.py  test_configs.py  test_loans.py  test_members.py  test_savings.py
(+60 files in other folders)
