[tool.poetry]
name = "katsu"
version = "0.1.0"
description = "Credit Union Accounting Platform"
authors = ["Daniel Murphy <daniel@devasta.ie>"]
license = "MPL"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
WTForms = "^2.3.3"
Flask-WTF = "^0.15.1"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
